--- a/src/styles/FormItem.css
+++ b/src/styles/FormItem.css
@@ -1,3 +1,12 @@
 .form-item {
   display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.icons > img {
+  margin-left: 10px;
+  width: 25px;
+  height: 25px;
 }
