--- a/src/styles/FormSection.css
+++ b/src/styles/FormSection.css
@@ -1,5 +1,12 @@
+.form-section {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
 .form-section header {
   display: flex;
+  justify-content: space-between;
 }
 
 img[src$='svg'] {
