--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,17 @@
   grid-template-columns: 2fr 3fr;
   gap: 20px;
   padding: 20px;
+  margin: 0 auto;
+  max-width: 1800px;
+}
+
+img[src$='svg'] {
+  width: 30px;
+  height: 30px;
+}
+
+@media (max-width: 770px) {
+  #root {
+    grid-template-columns: 1fr;
+  }
 }
