--- a/src/styles/TemplateForm.css
+++ b/src/styles/TemplateForm.css
@@ -4,7 +4,7 @@
   gap: 50px;
 }
 
-button {
+.template-form button {
   cursor: pointer;
   background-color: white;
   font-size: 0.9rem;
@@ -13,6 +13,6 @@ button {
   padding: 10px 15px;
 }
 
-button:active {
+.template-form button:active {
   transform: translateY(4px);
 }
